--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "pinia": "^2.0.0",
     "vite": "^6.1.0",
     "vue": "^3.5.13",
