--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@vueuse/core": "^12.7.0",
     "pinia": "^2.0.0",
+    "uuid": "^11.1.0",
     "vite": "^6.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13"
